tests/compile_fail/bundle_macro_malformed_nested.rs
fn main() {
    let _ = rrtl::bundle! {
        Bad {
            meta: Meta(),
        }
    };
}
